# app-catalog

./: .coveragerc  .eslintrc  .gitignore  .gitreview  API.rst  CONTRIBUTING.rst  HACKING.rst  INSTALL.rst  LICENSE  README.rst  bindep.txt  manage.py  openstack-common.conf  other-requirements.txt  package.json  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
contrib/: move_to_glare.py  move_to_glare_10.py  test-glare.conf
contrib/glare/: README.rst  requirements.txt  setup.cfg  setup.py
contrib/glare/assets/: common.py
contrib/glare/assets/bundle/: __init__.py
contrib/glare/assets/bundle/v1/: asset.py
contrib/glare/assets/glance_image/: __init__.py
contrib/glare/assets/glance_image/v1/: asset.py  image.py
contrib/glare/assets/heat/v1/: template.py
contrib/glare/assets/heat_template/: __init__.py
contrib/glare/assets/heat_template/v1/: asset.py
contrib/glare/assets/murano/v1/: package.py
contrib/glare/assets/murano_package/: __init__.py
contrib/glare/assets/murano_package/v1/: asset.py
contrib/glare/assets/tosca/v1/: template.py
contrib/glare/assets/tosca_template/: __init__.py
contrib/glare/assets/tosca_template/v1/: asset.py
contrib/glare/openstack_app_catalog/: artifacts.py  middlewares.py
deployment/: README.md  deploy.sh
deployment/catalog-ci-jenkins/manifests/: site.pp
doc/source/: conf.py  index.rst  installation.rst  usage.rst
openstack_catalog/: __init__.py  asset.py  auth.py  cli.py  forms.py  scss_filter.py  settings.py  static_settings.py  urls.py  views.py  wsgi.py  wsgi_django.py
openstack_catalog/api/: __init__.py  v1.py  v2.py
openstack_catalog/plugins/glare/: import_from_yaml.py  middlewares.py  requirements.txt
openstack_catalog/templates/: _newscripts.html  _newstylesheets.html  _scripts.html  _stylesheets.html  create_asset.html  create_asset_form.html  index.html  new_asset.html  testicons.html  testindex.html
openstack_catalog/tests/: test_openstack_catalog.py
openstack_catalog/web/: index.html  testicons.html
openstack_catalog/web/static/: assets.schema.yaml  assets.yaml  assets_dead.yaml  assets_merge.yaml  glance_images.json  (+11 more)
tools/: asset_history.sh  check_app_catalog_yaml.py  testserver.py  update_assets.sh  yaml2json.py
(+40 files in other folders)
