[metadata]
name = openstack_app_catalog
summary = Application catalog for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    app-catalog-manage = openstack_catalog.cli:main
    app-catalog-import-assets = openstack_catalog.plugins.glare.import_from_yaml:main

[files]
packages =
    openstack_catalog

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openstack_catalog/locale
domain = catalog

[update_catalog]
domain = catalog
output_dir = openstack_catalog/locale
input_file = openstack_catalog/locale/catalog.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openstack_catalog/locale/catalog.pot
